20130223 peripherals/disk/disciple.c,roms/disciple.rom: remove GDOS from
         DISCiPLE ROM image and use 8 KiB ROMs (Stuart).
20130223 peripherals/disk/disciple.c: remove comments regarding unattached
         port I/O for paging operations (Stuart).
20130223 peripherals/disk/{disciple,plusd}.[ch]: rename the paging port
         functions to {disciple,plusd}_patch_{read,write} (from *_mem_*)
         to follow MGT terminology (Stuart).
20130223 man/fuse.1: improve NMI documentation for +D and DISCiPLE (Stuart).
20130225 compat/{win32/Makefile.am,unix/{Makefile.am,tuntap.c},
         morphos/Makefile.am,wii/Makefile.am,amiga/Makefile.am,
         linux/Makefile.am},configure.ac,peripherals/{speccyboot.c,
         nic/Makefile.am}: improve SpeccyBoot behaviour on non-Linux systems
         and when ROM is not available (patch #302) (Sergio).
20130229 man/fuse.1: sort disciple, discipledisk, paltv2x, sound-device and
         specdrum options alphabetically (Sergio).
20130301 man/fuse.1: add Spectranet options and fix a couple of typos (bug #244)
         (Sergio).
20130303 ui/widget/menu.c: remove potential use of uninitialised variable
         (Fred).
20130303 peripherals/disk/disk.c: fix memory disk image corrupted after save
         (bug #279) (Sergio).
20130303 man/fuse.1: document hq2x and hq3x filters (Sergio).
20130308 peripherals/spectranet.[ch],z80/{coretest.c,z80.{c,h,pl}}: implement
         Spectranet's "suppress NMI" flipflop (bug #259).
20130310 periph.[ch],peripherals/disk/{beta.c,disciple.c,opus.c,plusd.c},
         peripherals/ide/{divide.c,simpleide.c,zxatasp.c,zxcf.c},
         peripherals/{fuller.c,if1.c,kempmouse.c,melodik.c,printer.c,
                      speccyboot.c,specdrum.c,spectranet.c},
         ui/options.dat: do a hard reset when a peripheral that requires it is
         enabled or disabled in settings (bugs #281, #283, #289) (Fred).
20130310 man/fuse.1: mention that peripherals changes can result in hard resets
         (Fred).